--- a/app/app/src/main/res/layout/activity_usage.xml
+++ b/app/app/src/main/res/layout/activity_usage.xml
@@ -11,44 +11,45 @@
 
 
     <TextView
-        android:layout_width="402dp"
-        android:layout_height="315dp"
-        android:layout_centerInParent="true"
+        android:layout_width="398dp"
+        android:layout_height="108dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="144dp"
         android:fontFamily="@font/opensans"
         android:lines="40"
-        android:text="Wyszukaj urządzenie pacjenta i wciśnij Połącz.\n"
+        android:text="Wyszukaj czujnik i wciśnij przycisk Połącz.\n"
         android:textColor="#105488"
         android:textSize="14sp" />
+
     <ImageView
 
-        android:layout_width="133dp"
-        android:layout_height="146dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="159dp"
+        android:layout_width="264dp"
+        android:layout_height="210dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="207dp"
+        android:layout_marginEnd="74dp"
+        android:layout_marginRight="74dp"
+        android:layout_marginBottom="314dp"
         app:srcCompat="@drawable/przyciski" />
 
     <TextView
         android:layout_width="402dp"
         android:layout_height="135dp"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="120dp"
+        android:layout_marginBottom="167dp"
         android:fontFamily="@font/opensans"
         android:lines="40"
-        android:text="Aplikacja przekieruje Cię do terminalu gdzie będziesz mógł sprawdzić stan pacjenta w danej chwili.\nW razie ataku padaczkowego udziel pomocy.\nW razie długotrwałego ataku skontaktuj się z pogotowiem przyciskiem Zadzwoń po pomoc.  "
+        android:text="Aplikacja przekieruje Cię do terminalu gdzie będzie wyświetlany stan danego czujnika (bezpieczny/alarm) Moment pojawienia się komunikatu alarm będzie oznaczał naruszenie danego czujnika "
         android:textColor="#105488"
         android:textSize="14sp" />
-    <ImageView
-
-        android:layout_width="133dp"
-        android:layout_height="146dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="350dp"
-        android:layout_marginBottom="40dp"
-        app:srcCompat="@drawable/call" />
-
 
 
 </RelativeLayout>
